--- a/.github/workflows/modelcicd.yml
+++ b/.github/workflows/modelcicd.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v4
       - name: Python setup
-        uses: actions/setup-Python
+        uses: actions/setup-Python@v5
         with:
           python-version: 3.12
       - name: Install python dependencies
